# composify

./: .gitignore  .gitmodules  CONTRIBUTING.md  Pipfile  README.md  install.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
example/: project.yml
gpm/: __init__.py  __main__.py
src/composify/: __init__.py  __main__.py  build.py  builder.py  db.py  db.sql  env.py  interactions.py  log.py  log_config.yaml  template.py
src/gpm/: __init__.py  __main__.py
tests/: __init__.py
