[tool.poetry]
name = "gpm"
version = "0.1.0"
description = "Git Project Manager(GPM)"
authors = ["Timothy Pidashev <pidashev.tim@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "gpm", from = "src" }
]
include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
tox = "^3.25.1"
pylint = "^2.14.5"
pytest = "^7.1.2"
flake8 = "^5.0.4"
coverage = "^6.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
