[metadata]
name = git-project-manager
version = attr: gpm.__version__
description = Git Project Manager(GPM)
author = Timothy Pidashev
author_email = pidashev.tim@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
keywords = git, projects, dev
project_urls =
    Source = https://github.com/timmypidashev/gpm
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
python_requires = >= 3.8
include_package_data = True

[options.packages.find]
include =
    gpm
    gpm.*

[options.package_data]
LICENSE = LICENSE

[options.entry_points]
console_scripts =
    gpm = gpm:run_as_module
